--- a/Site/views/build.haml
+++ b/Site/views/build.haml
@@ -3,7 +3,7 @@
   %h1
     Download
   %p
-    You are downloading G.UI.
+    You are downloading Lattice.
   %p
     This page will generate a single JavaScript file, containing the chosen components.
   %hr
