--- a/Site/views/roadmap.haml
+++ b/Site/views/roadmap.haml
@@ -3,6 +3,7 @@
     Roadmap
   %p
     You can browse the current issues for milestones at github.
+  %hr
   %h2
     Release Candidate 1
   %ul
@@ -15,4 +16,16 @@
     %li
       Display properties (@) in the docs.
     %li
-      Packager for ruby.
+      Garbage collection. (destroy())
+    %li
+      Specs.
+    %li
+      Namespace-, event-, attribute-, class-name normalization.
+  %hr
+  %h2
+    Release Candidate 2
+  %ul
+    %li
+      More themes.
+    %li
+      Fix issues that come up.
