Preparing to push to Heroku.

--- a/Site/views/home.haml
+++ b/Site/views/home.haml
@@ -19,11 +19,7 @@
     About
   %p
     The goal of this project is to create a 
-    %b lightweight, extensible, modular
-    and 
-    %b easy to use 
-    UI 
-    %b framework / library
+    %b lightweight, extensible, modular JavaScript UI framework / library
     , which uses the MooTools class architecture and has elements that are rearly seen in other libraries, but used in desktop applications or in mobile device UIs. 
   %hr
   %h2
@@ -62,5 +58,5 @@
     %li
       Packager implementation for Ruby, that supports both JavaScript nad CoffeeScript.
     %li
-      Mootools class documentation creator in Ruby that supports extends, implements, delegates, attributes, events, properties, using YAML.
+      MooTools class documentation creator in Ruby that supports extends, implements, delegates, attributes, events, properties, using YAML.
     
