--- a/Site/views/layout.haml
+++ b/Site/views/layout.haml
@@ -16,7 +16,7 @@
         - title = "Lattice"+request.path_info.split("/").each{|item| item.capitalize!}.join(" :: ")
       = title
   %body
-    %nav
+    .nav
       %ul
         %li
           Lattice
