--- a/Site/views/docindex.haml
+++ b/Site/views/docindex.haml
@@ -28,14 +28,14 @@
       Inherited Event
       
   %ul
-    - Dir.entries('../Docs').sort.each do |dir|
-      - if not dir =~ /^\./ and File.directory? '../Docs/'+dir
+    - Dir.entries('Docs').sort.each do |dir|
+      - if not dir =~ /^\./ and File.directory? 'Docs/'+dir
         %li.dir
           %ul
             %li.file
               %span
                 = dir
-            - Dir.entries("../Docs/#{dir}").sort.each do |file|
+            - Dir.entries("Docs/#{dir}").sort.each do |file|
               - if not file =~ /^\./
                 %li.file
                   %a{:href=>"/reference/#{dir}/#{file}"} 
