--- a/Site/views/roadmap.haml
+++ b/Site/views/roadmap.haml
@@ -5,7 +5,21 @@
     You can browse the current issues for milestones at github.
   %hr
   %h2
-    Release Candidate 1
+    0.9 (current) - For MooTools Forge 
+  %ul
+    %li
+      Current elements done and documented.
+    %li
+      Two themes: light and dark. (color variation)
+    %li
+      Website.
+    %li
+      Developer Guides (building, contributing, etc...)
+    %li
+      Class status document.
+  %hr
+  %h2
+    0.9x - Release Candidate 1
   %ul
     %li
       Validators for every attribute.
@@ -21,11 +35,22 @@
       Specs.
     %li
       Namespace-, event-, attribute-, class-name normalization.
+    %li
+      Possible structural changes.
+    %li
+      Compatilibty testing.
   %hr
   %h2
-    Release Candidate 2
+    0.9x - Release Candidate 2
   %ul
+    %li
+      More elements if needed.
+    %li
+      Layout engine support.
     %li
       More themes.
     %li
       Fix issues that come up.
+  %hr
+  %h2
+    1.0 - Stable Release
